# ReSTIR-DI-with-CUDA

./: .gitignore  CMakeLists.txt  CMakePresets.json  PathTraceKernel.cu  README.md  RIS.cpp  ReSTIRDI.cu  ReSTIRDI.h  cutil_math.h  imgui.ini  main.cpp  vcpkg-configuration.json
lib/: freeglut.lib  freeglut_static.lib
